fix for qnqa ui letter spacing

--- a/gn2/wqflask/static/new/css/llm.css
+++ b/gn2/wqflask/static/new/css/llm.css
@@ -39,16 +39,12 @@
     font-size: 24px;
     font-family: serif;
     color: #3071a9;
-    font-style: italic;
-    letter-spacing: 0.3em;
     text-transform: capitalize;
-
     text-decoration: underline;
   }
 
   #gnqa_query::first-letter {
     font-size: 30px;
-    font-style: italic;
 
   }
 
